--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{
     font-family: 'Poppins', sans-serif;
+    margin: 0;
 }
 
 h1{
@@ -7,6 +8,8 @@ h1{
 }
 .banner-area{
     padding: 5% 8%;
+    background: url(./images/top-banner.png);
+    background-repeat: no-repeat;
 }
 
 .left-half,
