--- a/style.css
+++ b/style.css
@@ -161,7 +161,7 @@ h1{
         width: 100%;
     }
     .experience-area{
-        height: 90g0px;
+        height: 900px;
     }
     .single-experience{
         width: 90%;
